update reflection